istio-config/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-guestbook-destinationrule
spec:
  host: my-guestbook.prod.svc.cluster.local
  subsets:
  - name: prod
    labels:
      version: v1
  - name: stage
    labels:
      version: v2
